--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Une liste de liens, simple d'utilisation">
     <meta name="author" content="fkeloks">
 
     <title>Links</title>
@@ -30,11 +30,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="">MonProjet</a>
+                <a class="navbar-brand" href="/">Ma liste de liens favoris</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="">Home</a></li>
+                    <li class="active"><a href="/">Accueil</a></li>
                 </ul>
             </div>
         </div>
