Update design + add fonctions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Une liste de liens, simple d'utilisation">
     <meta name="author" content="fkeloks">
 
+    <link rel="icon" type="image/png" href="static/favicon.png"/>
+
     <title>Links</title>
 
     <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,6 +19,18 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <style>
+        @media (min-width: 1200px) {
+            .container {
+                width: 80%;
+            }
+        }
+
+        * {
+            outline: none;
+        }
+    </style>
 </head>
 
 <body>
